@@ -354,7 +354,7 @@
 				      <property name="digits">1</property>
 				      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 				      <property name="inverted">False</property>
-				      <property name="adjustment">500 100 1510 10 10 0</property>
+				      <property name="adjustment">500 100 1500 10 10 0</property>
 				    </widget>
 				    <packing>
 				      <property name="padding">0</property>
