@@ -1,3 +1,12 @@
+Mon Aug 11 11:50:36 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-keyboard-properties.glade: Patch from Elijah Newren
+	<newren@math.utah.edu> to bring the possible repeat range in sync
+	with the a11y capplet.
+
+	* gnome-keyboard-properties.c: Patch from Elijah Newren to deal
+	with the change in the peditor code.
+
 Fri Aug  1 15:04:39 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-keyboard-properties.glade: Patch from Dennis Cranston
