@@ -1,3 +1,8 @@
+Mon Aug 11 13:53:23 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-mouse-properties.c (delay_value_changed_cb): fix the
+	double click peditor.
+
 2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>
 
 	* gnome-mouse-properties.glade: Patch to fix spacing between action 
