@@ -1,3 +1,9 @@
+Mon Aug 11 11:55:49 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-accessibility-keyboard-properties.glade: Patch from Elijah
+	Newren <newren@math.utah.edu> to bring the possible repeat range
+	in sync with the keyboard capplet.
+
 2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>
 
 	* gnome-accessibility-keyboard-properties.glade: Patch to add 
